[gd_scene load_steps=2 format=3 uid="uid://jutsqqgyafyw"]

[ext_resource type="Script" uid="uid://bwl6g5qflkvq3" path="res://scripts/ui/shop.gd" id="1_lx5au"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lx5au")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "ðŸ›’ Boutique"

[node name="TopBar" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="LabelGold" type="Label" parent="Margin/VBox/TopBar"]
layout_mode = 2
text = "ðŸ’° Or : ..."

[node name="Sep1" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="ScrollItems" type="ScrollContainer" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="ItemsList" type="VBoxContainer" parent="Margin/VBox/ScrollItems"]
layout_mode = 2

[node name="Sep2" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="BottomButtons" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="ButtonBack" type="Button" parent="Margin/VBox/BottomButtons"]
layout_mode = 2
text = "â¬… Retour HUB"
